Adopt v3 applications changes
Remove extra information from DeployedMtaApplication as that is no
longer present in CloudApplication
Add info from MTA module to CloudApplicationExtended

Remove usage of CloudRouteSummary and replace it with CloudRoute
Update route-related objects as well

Update jsons with routes and apps

Add calls for extra application information (such as process, env and so
on) only when needed

LMCROSSITXSADEPLOY-1749